--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+      
+      - name: Run ESLint
+        run: npm run lint
 
   build:
     needs: test
