--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,10 +82,14 @@ jobs:
 
   rollback:
     runs-on: ubuntu-latest
+    needs: deploy-production
+    if: failure()
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        with:
+          fetch-depth: 0
+        
       - name: Get Previous Stable Tag
         id: get-tag
         run: |
