Deploy-staging runs server in background ci-cd.yml

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,7 +86,7 @@ jobs:
           JWT_SECRET: ${{ secrets.STAGING_JWT_SECRET }}
         run: |
           npm run build
-          npm run server
+          npm run server &
 
   deploy-production:
     needs: deploy-staging
