--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@sentry/react": "^9.8.0",
+    "@sentry/vite-plugin": "^3.2.2",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
