updated the build to pass the auth token

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,6 +58,8 @@ jobs:
         run: npm install
 
       - name: Build frontend
+        env:
+          SENTRY_AUTH_TOKEN: ${{secrets.SENTRY_AUTH_TOKEN }}
         run: npm run build
 
       - name: Create Sentry Release and Upload Source Maps
